vlib/v/checker/tests/propagate_option_with_result_err.out
vlib/v/checker/tests/propagate_option_with_result_err.vv:6:7: error: propagating a Result like an Option is deprecated, use `foo()!` instead of `foo()?`
    4 | 
    5 | fn bar() ?string {
    6 |     foo()?
      |          ^
    7 |     return ''
    8 | }
